--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,11 @@ before_script:
   - sudo apt-get update -qq
   - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
   - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
-  - sudo apt-get install x11proto-randr-dev libxrandr2 libsfml-dev
+  - sudo apt-get install x11proto-randr-dev libxrandr2
+
+  - git clone --recursive --recurse-submodules git://github.com/SFML/SFML.git
+  - cmake SFML/CMakeLists.txt
+  - cd SFML && make && sudo make install && cd ..
 
   - git clone --recursive --recurse-submodules git://github.com/Bromeon/Thor.git
   - cmake Thor/CMakeLists.txt
