--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ compiler:
   - gcc
   - clang
 before_script:
-  - sudo apt-get install libglew-dev libjpeg62 libjpeg62-dev x11proto-randr-dev libxrandr2 libx11 libx11-dev libx11-data libx11-xcb-dev libx11-xcb1 libx11-6-udeb libxrender1 libxrender-dev -y
+  - sudo apt-get install libglew-dev libjpeg62 libjpeg62-dev x11proto-randr-dev libxrandr2  libx11-data libx11-xcb-dev libx11-xcb1 libx11-dev libxrender1 libxrender-dev -y
   - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
   - sudo apt-get update -qq
   - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
