--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ before_script:
 
   - cmake Pokesgi/CMakeLists.txt
 script:
-  - make Pokesgi/
+  
+  - make Pokesgi/ clean && make Pokesgi/
 
 branches:
   only:
