--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: cpp
 compiler:
   - gcc
   - clang
+
 before_script:
   - sudo apt-get install libglew-dev libjpeg62 libjpeg62-dev x11proto-randr-dev libxrandr2  libx11-data libx11-xcb-dev libx11-xcb1 libx11-dev libxrender1 libxrender-dev libxi-dev x11proto-input-dev libxrandr-dev libudev1 libudev-dev libopenal-data libopenal1 libopenal-dev libvorbis-dev libvorbis0a libvorbisenc2 libvorbisfile3  libflac8 libflac-dev libflac++6 libflac++-dev -y
   - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
@@ -16,9 +17,9 @@ before_script:
   - cd Thor && make && sudo make install && cd ..
 
   - cmake Pokesgi/CMakeLists.txt
+  - cd Pokesgi && make clean
 script:
-  
-  - make Pokesgi/ clean && make Pokesgi/
+  - make
 
 branches:
   only:
